--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "bin": "src/bin.cjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "post": "npm run build --workspace=translator && npm version patch && npm publish"
   },
   "keywords": [],
   "author": "",
