--- a/packages/translator/package.json
+++ b/packages/translator/package.json
@@ -1,7 +1,7 @@
 {
   "name": "translator",
   "version": "0.0.1",
-  "main": "dist/index.js",
+  "main": "dist/Main.js",
   "scripts": {
     "build": "rm -rf dist && rollup -c",
     "dev": "rollup -c -w",
