--- a/packages/custom-components/package.json
+++ b/packages/custom-components/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "post": "npm version patch && npm publish"
   },
   "peerDependencies": {
     "@motion-canvas/2d": "^3.17.2",
