--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "license": "ISC",
   "workspaces": [
     "packages/translator",
-    "packages/utils"
+    "packages/custom-components"
   ]
 }
