--- a/packages/2d/package.json
+++ b/packages/2d/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@svg-to-motion-canvas/2d",
-  "version": "3.17.2",
-  "description": "A 2D renderer for Motion Canvas",
+  "version": "0.0.1",
+  "private": true,
+  "description": "@motion-canvas/2d 3.17.2 exposed for utility",
   "author": "motion-canvas",
   "homepage": "https://motioncanvas.io/",
   "bugs": "https://github.com/motion-canvas/motion-canvas/issues",
@@ -28,8 +29,9 @@
     "tsconfig.project.json"
   ],
   "devDependencies": {
-    "@svg-to-motion-canvas/internal": "0.0.0",
+    "@svg-to-motion-canvas/internal": "workspace:0.0.0",
     "@motion-canvas/ui": "^3.17.2",
+    "@motion-canvas/2d": "^3.17.2",
     "@preact/signals": "^1.2.1",
     "clsx": "^2.0.0",
     "jsdom": "^22.1.0",
