--- a/packages/custom-components/package.json
+++ b/packages/custom-components/package.json
@@ -7,7 +7,7 @@
     "post": "npm version patch && npm publish"
   },
   "dependencies": {
-    "@svg-to-motion-canvas/2d": "0.0.1",
+    "@svg-to-motion-canvas/2d": "workspace:*"
   },
   "peerDependencies": {
     "@motion-canvas/2d": "^3.17.2",
