--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "packages/custom-components",
     "packages/2d",
     "packages/internal"
-  ]
+  ],
+  "devDependencies": {
+    "@changesets/cli": "^2.28.1"
+  }
 }
