--- a/packages/internal/package.json
+++ b/packages/internal/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@svg-to-motion-canvas/internal",
-  "private": true,
-  "version": "0.0.0",
+  "version": "0.0.3",
+  "description": "@motion-canvas/internal for 3.17.2 exposed for utility",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
