--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 node_modules
+
+/packages/*/dist
+/packages/*/editor
+/packages/*/lib
+/packages/*/static
+/packages/*/build
+/packages/*/output
+
+.idea
