--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "test": "npm run test --workspace=translator",
     "ci:publish": "pnpm publish -r"
   },
-  "devEngines": {
-    "packageManager": "pnpm@9.12.3"
-  },
+  "packageManager": "pnpm@9.12.3",
   "keywords": [],
   "author": "",
   "license": "ISC",
